[package]
name = "browser-pdf-print"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["cargo", "derive", "env", "wrap_help"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
test-log = { version = "0.2.12", default-features = false, features = [
  "trace",
] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.2"
tracing = { version = "0.1.37", features = ["valuable", "async-await"] }
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "valuable",
  "valuable-serde",
  "tracing-serde",
  "serde",
] }
# webdriver must be in exact sync with fantoccini
webdriver = "0.48.0"
fantoccini = { git = "https://github.com/jonhoo/fantoccini", rev = "c6e3a4513c9375c223f5c85e95ca69ad724c2ada", default-features = false, features = [
  "hyper-rustls",
  "rustls-tls",
] }
base64 = "0.21.4"
